sandbox/mealie/network-policies/allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-traefik
  namespace: mealie
spec:
  podSelector:
    matchLabels:
      app: mealie
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 9000
    - from:
        - ipBlock:
            cidr: 192.168.50.119/32 # homelab1
      ports:
        - protocol: TCP
          port: 9000
